Fixes footer alignment on mobiles

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,16 +3,14 @@
 
 .footer {
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
 	justify-content: space-between;
-	align-items: flex-start;
-
+	align-items: flex-end;
+	gap: $gap-2x $gap-4x;
 	padding-top: $gap-29x;
 	padding-bottom: $gap-12x;
-	gap: $gap-2x;
 
-	@include media(lg) {
-		flex-direction: row;
+	@include media(sm) {
 		align-items: flex-end;
 	}
 }
@@ -21,4 +19,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	gap: $gap-2x;
+	@include media(sm) {
+		gap: unset;
+	}
 }
